objects/FieloCH__ChallengeReward__c.object
<CustomObject>
    <customHelpPage>FieloCH__ChallengeRewardHelpBackend</customHelpPage>
    <fields>
        <fullName>F_PRM_CustomRewardClass__c</fullName>
        <label>Custom Reward Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FieloPRM_DeliveryRewardCustom.Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_PRM_ExpirationDay__c</fullName>
        <label>Expiration Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>F_PRM_ExpirationMonth__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_ExpirationMonth__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_ExpirationNumber__c</fullName>
        <label>Expiration number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_ExpirationType__c</fullName>
        <label>Expiration type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Fix Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_SubscribeFrom__c</fullName>
        <formula>FieloCH__Challenge__r.FieloCH__SubscribeFrom__c</formula>
        <label>Subscribe From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_TypeReward__c</fullName>
        <label>Type of Reward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level</fullName>
                    <default>true</default>
                    <label>Level</label>
                </value>
                <value>
                    <fullName>Pre-Condition</fullName>
                </value>
                <value>
                    <fullName>Join</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__AttachmentId__c</fullName>
        <description>The Id of the attach record</description>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Badge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge</label>
        <referenceTo>FieloEE__Badge__c</referenceTo>
        <relationshipLabel>Challenge Rewards</relationshipLabel>
        <relationshipName>ChallengeRewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>ChallengeRewards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCH__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__FieldToUpdate__c</fullName>
        <description>Field of member to update</description>
        <label>Field To Update</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__From__c</fullName>
        <description>Range of position to win this reward</description>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Limit__c</fullName>
        <description>Limit of reward by member</description>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__ListValue__c</fullName>
        <label>ListValue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__LogicalExpression__c</fullName>
        <label>Logical Expression</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__PositionText__c</fullName>
        <formula>IF( ISPICKVAL(FieloCH__Challenge__r.FieloCH__TableType__c, &apos;Standard&apos;) ,  TEXT(FieloCH__Position__c) , 

         IF( FieloCH__To__c == 0 , 
             &apos; + &apos;+ TEXT(FieloCH__From__c) ,
             TEXT(FieloCH__From__c) +&apos; - &apos;+ TEXT(FieloCH__To__c) 
         )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Position__c</fullName>
        <label>Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Reward__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Instant reward</description>
        <label>Reward</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Reward does not exist or it is not an instant reward</errorMessage>
            <filterItems>
                <field>FieloEE__Reward__c.FieloEE__isInstantReward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Challenge Rewards</relationshipLabel>
        <relationshipName>ChallengeRewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__To__c</fullName>
        <description>Range of position to win this reward</description>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__TransactionPoint__c</fullName>
        <description>Point value of the transaction</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__TransactionType__c</fullName>
        <description>Type of the transaction</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjust</fullName>
                    <default>true</default>
                    <label>Adjust</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Value__c</fullName>
        <description>Value to update the member field</description>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__WithCustomReward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom reward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Level</label>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherFieloCHChallengeRewardc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Challenge Reward</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>F_PRM_OnlyProgramLevelBadges</fullName>
        <active>true</active>
        <description>Validates that only &apos;Program Level&apos; can be configured as rewards</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
(
Text( FieloCH__Badge__r.F_PRM_TypeSelection__c ) &lt;&gt; &apos;Program Level&apos; ||
 FieloCH__Badge__r.F_PRM_Type__c &lt;&gt; &apos;Program Level&apos;
)</errorConditionFormula>
        <errorMessage>Only Program Level badges can be granted as rewards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>F_PRM_PreventChallengeRewardModification</fullName>
        <active>true</active>
        <description>Cannot modify the Challenge Reward if the Challenge is Active.</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(
FieloCH__Challenge__r.FieloCH__IsActive__c
)</errorConditionFormula>
        <errorMessage>Cannot modify the Challenge Reward if the Challenge is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Reward</fullName>
        <active>false</active>
        <description>If the Challenge is active then the reward cannot be modified</description>
        <errorConditionFormula>FieloCH__Challenge__r.FieloCH__IsActive__c</errorConditionFormula>
        <errorMessage>Cannot modified the Reward if the Challenge is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Reward_Program_Validation</fullName>
        <active>true</active>
        <description>Checks that the reward belongs to the same program as the challenge.</description>
        <errorConditionFormula>AND(
    NOT( ISBLANK(FieloCH__Reward__c) ) ,
    FieloCH__Reward__r.FieloEE__Program__c !=  FieloCH__Challenge__r.FieloCH__Program__c)</errorConditionFormula>
        <errorMessage>The Reward does not belong to the same Program as the Challenge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fielo_DemotionValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
	NOT($User.BypassVR__c), 
	TEXT(FieloCH__Challenge__r.FieloCH__Mode__c)=&apos;Teams&apos;, 
	NOT(ISBLANK(TEXT(F_PRM_ExpirationType__c))) 
)</errorConditionFormula>
        <errorDisplayField>F_PRM_ExpirationType__c</errorDisplayField>
        <errorMessage>Demotion is not supported on &apos;Teams&apos; mode challenges</errorMessage>
    </validationRules>
</CustomObject>